static/css/style.css
/* ... */
.barbers-tabs-icon {
  font-size: 1.3rem;
  padding-top: 0.5rem;
  padding-bottom: 0.25rem;
}

/* Contact Page */

#form-contact > .form-group:nth-of-type(1) {
  margin-bottom: 0.5rem;
}

.btn.btn-contact.mt-4_5 {
  margin-top: 36px;
}

/* Thank You page */

.thank-you-alert {
  position: relative;
  top: -20px;
}

/* Error Handlers */

.error-redirect-link {
  font-weight: 400;
}

.error-alert {
  position: relative;
  top: -20px;
}

/* Media Queries */

@media only screen and (min-width: 768px) {
  /* global styles/base template components */

  body {
    min-height: 100vh;
  }

  h6 {
    font-size: 1.6rem;
  }

  .main-container {
    min-height: calc(100vh - 62px);
    margin-top: auto;
    display: block;
  }

  .navbar-brand {
    font-size: 1.5rem;
  }

  .navbar-nav {
    position: relative;
    top: -4px;
    right: 0;
    margin-left: auto;
  }

  #navbar-nav-list .nav-item > .nav-link {
    font-size: 0.9rem;
  }

  #navbar-nav-list .nav-item.active > .nav-link {
    background-color: unset;
    color: #263c92;
    font-weight: 500;
    border-radius: unset;
  }

  .form-card.register-form-card,
  .form-card.login-form-card {
    max-width: 70%;
  }

  .reviews-card.form-card {
    min-height: calc(100vh - 134px);
  }

  /* spacing/utility classes */

  .pull-content-up {
    justify-content: center;
    align-items: center;
    top: -122px;
  }

  .push-down {
    position: relative;
    top: 122px;
  }

  /* Flash message container */

  .well.container.flash-message-container {
    z-index: 99;
  }

  /* Home (landing) page */

  .jumbotron {
    max-width: 70%;
    padding: 2.5rem 3.4rem 3rem;
    top: -40px;
  }

  /* Registration page */

  #form-registration > h3,
  #form-registration > h3 + p,
  #form-registration .form-group,
  #form-registration > .pre-register,
  #form-registration button,
  #form-registration hr,
  #form-registration .already-a-member {
    max-width: 300px;
    margin-left: auto;
    margin-right: auto;
  }

  #form-registration .post-register {
    max-width: 260px;
    margin-left: auto;
    margin-right: auto;
  }

  /* Login page */

  .form-card.login-form-card {
    top: -40px;
  }

  #form-login.p-5,
  #form-registration.p-5,
  #form-contact.p-5 {
    padding: 2.5rem 3.4rem 3rem !important;
  }

  #form-login > h3,
  #form-login > .form-group,
  #form-login > .form-group + div,
  #form-login > .not-a-member,
  #form-login > button {
    max-width: 300px;
    margin-left: auto;
    margin-right: auto;
  }

  /* Logout page */

  .logout-alert,
  .logout-alert.push-down {
    max-width: 70%;
    top: -40px;
  }

  /* Pagination */

  .pagination-wrapper {
    width: 70%;
  }

  .pagination-wrapper > .btn,
  .pagination-wrapper > i {
    height: 4rem;
    font-size: 1rem;
  }

  .pagination-wrapper > .btn:not(:last-of-type),
  .pagination-wrapper > i {
    margin-right: 2.1%;
  }

  .pagination-wrapper > .btn:last-of-type {
    margin-right: 0;
  }

  .pagination-wrapper > .btn {
    width: 9.8%;
  }

  .pagination-wrapper > i {
    width: 4.2%;
  }

  /* Barbers page */

  .btn-more-info,
  .btn-group-vertical {
    width: 86%;
    margin-left: 7%;
    margin-right: 7%;
    min-width: unset;
  }

  blockquote:before,
  blockquote:after {
    display: none;
  }

  .blockquote-even {
    border-left: 0;
    border-right: 0.25rem solid #eceeef;
  }

  .blockquote-odd {
    border-left: 0.25rem solid #eceeef;
  }

  .blockquote p {
    font-size: 1rem;
    line-height: 1;
  }

  .blockquote-paragraph {
    position: relative;
  }

  .blockquote-paragraph:before,
  .blockquote-paragraph:after {
    font-size: 4em;
    color: #ccc;
    line-height: 1em;
    vertical-align: 0em;
    position: absolute;
    display: inline;
    height: 80px;
  }

  .blockquote-paragraph:before {
    content: open-quote;
    top: -0.1rem;
  }

  .blockquote-paragraph:after {
    content: close-quote;
    padding-left: 0.75rem;
    bottom: -3rem;
  }

  .barbers-vibe {
    line-height: 1.2;
  }

  #_barbers-heading {
    font-size: 2.2rem;
  }

  .nav-tabs .nav-link {
    font-size: 0.85rem;
  }

  .barbers-tabs-icon {
    font-size: 1.5rem;
    padding-bottom: 0.5rem;
  }

  /* Recent Reviews page */

  .modal .btn-group-vertical {
    max-width: 40%;
    margin-left: auto;
    margin-right: auto;
  }

  .review-card-wrapper.my-reviews .card-body .blockquote {
    border-left: unset;
  }

  .blockquote-even {
    border-left: 0;
    border-right: 0.25rem solid #eceeef;
  }

  .blockquote-odd {
    border-left: 0.25rem solid #eceeef;
  }

  .review-card-wrapper.my-reviews .card-body .blockquote.blockquote-odd {
    border-left: 0.25rem solid #d1dbff;
  }

  .review-card-wrapper.my-reviews .card-body .blockquote.blockquote-even {
    border-right: 0.25rem solid #d1dbff;
  }

  /* Review Submit page */

  #review-submit-form-heading,
  #review-update-form-heading {
    font-size: 2.2rem;
  }

  .form-card.review-submit-form-card,
  .form-card.review-update-form-card,
  #alert-info-review-update-container {
    width: 90%;
  }

  /* Contact page */

  #form-contact > h3,
  #form-contact > .form-group,
  #form-contact > button {
    max-width: 300px;
    margin-left: auto;
    margin-right: auto;
  }

  /* Thank You page */

  .thank-you-alert {
    top: -40px;
    max-width: 70%;
  }
}
/* ... */

